--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@prisma/client": "^4.0.0",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^6.3.16",
     "next": "12.2.0",
     "react": "18.2.0",
@@ -23,6 +26,10 @@
   },
   "devDependencies": {
     "eslint": "8.18.0",
-    "eslint-config-next": "12.2.0"
+    "eslint-config-next": "12.2.0",
+    "prisma": "^4.0.0"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
