--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "@types/react": "^18.0.14",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.5.0",
+    "cookies": "^0.8.0",
     "framer-motion": "^6.3.16",
+    "httpie": "^1.1.2",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "reset-css": "^5.0.1"
+    "reset-css": "^5.0.1",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "eslint": "8.18.0",
+    "eslint": "^8.18.0",
     "eslint-config-next": "12.2.0",
-    "prisma": "^4.0.0"
+    "@typescript-eslint/eslint-plugin": "^5.30.3"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
