--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
     "eslint": "^8.18.0",
     "eslint-config-next": "12.2.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.3"
+    "prisma": "^4.0.0"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
