--- a/package.json
+++ b/package.json
@@ -12,28 +12,33 @@
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@prisma/client": "^4.0.0",
+    "@prisma/client": "^4.2.1",
     "@types/node": "^18.0.0",
     "@types/react": "^18.0.14",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
+    "easy-peasy": "^5.0.4",
+    "format-duration": "^2.0.0",
     "framer-motion": "^6.3.16",
     "httpie": "^1.1.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-howler": "^5.2.0",
     "react-icons": "^4.4.0",
     "reset-css": "^5.0.1",
+    "superjson": "^1.9.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "eslint": "^8.18.0",
     "eslint-config-next": "12.2.0",
-    "prisma": "^4.0.0"
+    "prisma": "^4.2.1"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
